Smithery.yaml update

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,6 +1,7 @@
 runtime: "container"
 build:
-  dockerfile: "Dockerfile"           # Path to your Dockerfile
-  dockerBuildPath: "."               # Docker build context
-startCommand:
+  dockerfile: "Dockerfile"
+  dockerBuildPath: "."
+transport:
   type: "http"
+  url: "/mcp"
