Modified Dockerfile and Smithery config

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -4,8 +4,4 @@ build:
   dockerBuildPath: "."               # Docker build context
 startCommand:
   type: "http"
-  configSchema:
-    type: object
-    properties: {}
-
-    exampleConfig: {}
+  configSchema: {}
