Switch to streamable http new attempt

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,7 +1,7 @@
-runtime: "container"
-build:
-  dockerfile: "Dockerfile"           # Path to your Dockerfile
-  dockerBuildPath: "."               # Docker build context
 startCommand:
   type: "http"
-  configSchema: {}
+  configSchema:
+    type: object
+    properties: {}
+  commandFunction: |
+    (config) => ({ command: 'uv', args: ['run', 'src/server.py'] })
