--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,5 +1,8 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config/smithery-yaml
 runtime: "container"
+transport:
+  type: http
+  url: /mcp
 build:
   dockerfile: "Dockerfile"
   dockerBuildPath: "."
