--- a/smithery.yaml
+++ b/smithery.yaml
@@ -10,6 +10,9 @@ startCommand:
   type: "http"
   # JSON Schema defining the configuration options for the MCP.
   configSchema:
-    type: object
-    properties: {}
+    type: "object"
+    required: "api_key"
+    properties:
+      api_key:
+        type: "string"
   exampleConfig: {}
