--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "matplotlib>=3.10.3",
-    "mcp[cli]>=1.9.2",
     "numpy>=2.2.6",
     "sympy>=1.14.0",
     "typing",
     "pydantic",
     "fastapi>=0.116.1",
+    "mcp>=1.13.1",
+    "typer>=0.17.3",
 ]
 
 [tool.uv.workspace]
